# aipack

./: README.md  pyproject.toml  setup.py
aipack/: __init__.py  cli.py  compress.py
aipack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_compress.py
