[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipack"
version = "0.1.0"
description = "AI context compressor for local LLMs — Llama 3, Mistral, Phi, etc."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["llm", "llama", "compression", "tokens", "context", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

# Zero mandatory dependencies — works on a fresh Python install.
dependencies = []

[project.optional-dependencies]
# Accurate Llama-3 tokenization (optional but recommended)
tokenizer = ["transformers>=4.38", "sentencepiece"]
# Pretty progress bars for large batches
rich = ["rich>=13"]

[project.scripts]
aipack = "aipack.cli:main"

[project.urls]
Repository = "https://github.com/yourname/aipack"

[tool.setuptools.packages.find]
where = ["."]
include = ["aipack*"]
